Added login page (which is making a better)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,11 @@
   <body>
     <div>Garena: <a href="/index">Bảng tin</a></div>
     <hr>
+    <div>
+      Liên Quân:
+      <a href="/index">Trang Chủ</a>
+      <a href="/login">Đăng Nhập</a>
+    </div>
     {% block content %}{% endblock %}
   </body>
 </html>
