--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <body>
     {% extends "base.html" %}
     {% block content %}
-        <h1>Xin chào, {{ user.username }}!</h1>
+        <h1>Xin chào, {{ current_user.username }}!</h1>
         {% for post in posts %}
         <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
         {% endfor %}
